# N-Body-Gravity-Simulation-Computational-Astrophysics

./: .gitignore  Cargo.toml  README.md
data/: solar_system.json
examples/: benchmark.rs  drift_comparison.rs  kepler_validation.rs
src/: analysis.rs  body.rs  forces.rs  integrator.rs  io.rs  lib.rs  main.rs  plot.rs
tests/: physics.rs
